--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="GPS Tracking" />
+    <meta name="google-site-verification" content="zX_m7bL5fzM95K63YLL_GzUHVex1ofqFbofFWEvNFi0" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
-    
     <script>
       window.global = window;
     </script>
